[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/Themes_v2/UNIVERSAL/VScrollBar.tres" type="Theme" id=1]
[ext_resource path="res://assets/Fonts_v2/PT_Sans/PT_30.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/Fonts_v2/Ledger/Ledger-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/Fonts_v2/FontThemes/MainMiddle.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/Textures_v2/Universal/Buttons/buttonbig_pressed.png" type="Texture" id=5]
[ext_resource path="res://assets/Textures_v2/Universal/Buttons/buttonbig_hover.png" type="Texture" id=6]
[ext_resource path="res://assets/Textures_v2/Universal/Buttons/buttonbig.png" type="Texture" id=7]
[ext_resource path="res://gui_modules/Mansion/Scripts/Tutorial.gd" type="Script" id=8]
[ext_resource path="res://assets/Textures_v2/CHEATS/buttonbig_cheats.png" type="Texture" id=9]
[ext_resource path="res://assets/Textures_v2/CHEATS/buttonbig_cheats_hover.png" type="Texture" id=10]
[ext_resource path="res://assets/Textures_v2/Universal/Buttons/buttonbig_disabled.png" type="Texture" id=11]
[ext_resource path="res://assets/Textures_v2/MANSION/Tutorial/button_tutorside_pressed.png" type="Texture" id=12]
[ext_resource path="res://assets/Textures_v2/MANSION/Tutorial/button_tutorside_hover.png" type="Texture" id=13]
[ext_resource path="res://assets/Textures_v2/MANSION/Tutorial/panel_tutorial.png" type="Texture" id=14]
[ext_resource path="res://assets/Textures_v2/MANSION/Tutorial/button_tutorside.png" type="Texture" id=15]
[ext_resource path="res://assets/Textures_v2/CHEATS/buttonbig_cheats_pressed.png" type="Texture" id=16]

[sub_resource type="DynamicFont" id=1]
size = 46
use_filter = true
font_data = ExtResource( 3 )

[node name="TutorialV2" type="Control" groups=["pauseprocess"]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 259.0
margin_top = 40.0
margin_right = -259.0
margin_bottom = -40.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
margin_left = -350.0
margin_top = -119.0
margin_right = 1775.0
margin_bottom = 1137.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_right = 1402.0
margin_bottom = 1000.0
texture = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_right = 302.0
margin_bottom = 93.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = SubResource( 1 )
text = "TUTORIALNAME"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TutorialImage" type="TextureRect" parent="."]
margin_left = 403.4
margin_top = 20.0
margin_right = 1303.4
margin_bottom = 756.0
expand = true
stretch_mode = 6

[node name="TutorialText" type="RichTextLabel" parent="."]
margin_left = 322.0
margin_top = 771.0
margin_right = 1379.0
margin_bottom = 896.0
theme = ExtResource( 1 )
custom_colors/default_color = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true

[node name="TutList" type="ScrollContainer" parent="."]
margin_left = 32.343
margin_top = 107.0
margin_right = 274.343
margin_bottom = 964.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="TutList"]

[node name="Button" type="TextureButton" parent="TutList/VBoxContainer"]
visible = false
margin_right = 242.0
margin_bottom = 54.0
toggle_mode = true
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 13 )

[node name="Label" type="Label" parent="TutList/VBoxContainer/Button"]
margin_right = 242.0
margin_bottom = 54.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Tut"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="TextureButton" parent="."]
margin_left = 363.519
margin_top = 914.0
margin_right = 523.519
margin_bottom = 971.997
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )
texture_disabled = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Back"]
margin_right = 160.0
margin_bottom = 58.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 2 )
text = "TUTORIALPREV"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Forward" type="TextureButton" parent="."]
margin_left = 1173.14
margin_top = 914.0
margin_right = 1333.14
margin_bottom = 971.997
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 6 )
texture_disabled = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Forward"]
margin_right = 160.0
margin_bottom = 58.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 2 )
text = "TUTORIALNEXT"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hide" type="TextureButton" parent="."]
margin_left = 745.0
margin_top = 914.0
margin_right = 967.0
margin_bottom = 972.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 10 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Hide"]
margin_left = -6.0
margin_right = 216.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 2 )
text = "OPTCLOSE"
align = 1
valign = 1
